<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Úkolníček</string>
    <string name="app_settings">Nastavení</string>
    
    <string name="app_settings_rest_server_url">URL serveru</string>
    <string name="app_settings_rest_server_url_key">rest_server_url</string>
    <string name="app_settings_signIn">Přihlášení uživatele</string>
    <string name="app_settings_userName">Uživatelské jméno</string>
    <string name="app_settings_userName_key">usrName</string>
    <string name="app_settings_password">Heslo</string>
    <string name="app_settings_password_key">password</string>
    
    <string name="valueDeleted">Záznam byl odstraněn</string>
    <string name="taskMarkedAsReaded_error">Při označování úkolu jako přečtený došlo k chybě:</string>
    <string name="taskMarkedAsReaded">Úkol byl označen jako přečtený</string>
    <string name="valueNotDeleted">Záznam se nepodařilo odstranit: </string>
    <string name="connection_error_noEnabled">Připojení k síti není dostupné.</string>
    <string name="signIn_error_noValid">Neplatné uživatelské jméno nebo heslo.</string>
    <string name="signedUser">Přihlášený uživatel: </string>
    
    <string name="loadingData">Načítání dat. Prosím čekejte.</string>
    <string name="noData">Nebyly nalezeny žádné hodnoty</string>
    
    <string name="main_tasks">Osobní</string>
    <string name="toMe_tasks">Pro mě</string>
    <string name="toOthers_tasks">Pro ostatní</string>
    
    <string name="signIn">Přihlásit</string>
    <string name="update">Upravit</string>
    <string name="save">Uložit</string>
    <string name="storno">Storno</string>
    <string name="delete">Odstranit</string>
    <string name="close">Uzavřít</string>
    
    <string name="detail_update">Úprava detailu</string>
    
    <string name="task_new">Nový úkol</string>
    <string name="task_categ">Kategorie:</string>
    <string name="task_name">Název:</string>
    <string name="task_desc">Popis:</string>
    <string name="task_finishToDate">Dokončit do:</string>
    <string name="task_finishToDate_date">Datum</string>
    <string name="task_finishToDate_time">Čas</string>
    <string name="task_finishedDate">Dokončeno dne:</string>
    <string name="task_executorId">Provádí:</string>
    <string name="task_inserterId">Založil:</string>
    <string name="task_insDate">Založeno dne:</string>

    <string name="task_isNotUpdatable">Záznam není možné upravovat</string>
    <string name="task_isNotCloseable">Záznam není možné uzavřít</string>
    <string name="task_isNotDeletable">Záznam není možné odstranit</string>
    
    <string name="error_taskCategLoading">Načítání kategorií se nezdařilo</string>
    <string name="error_taskSaving">Ukládání změn úkolu se nezdařilo</string>
    <string name="error_loginsLoading">Načítání uživatelů se nezdařilo</string>

</resources>