<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:inputType="textUri"
        android:key="@string/app_settings_rest_server_url_key"
        android:title="@string/app_settings_rest_server_url" />
    <EditTextPreference
        android:inputType="textPersonName"
        android:key="@string/app_settings_userName_key"
        android:title="@string/app_settings_userName" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/app_settings_password_key"
        android:title="@string/app_settings_password" />
    <CheckBoxPreference android:title="@string/app_settings_localDatabase" android:key="@string/app_settings_localDatabase_key" android:defaultValue="true"/>

</PreferenceScreen>