<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dip"
                android:text="@string/task_categ" />

            <TextView
                android:id="@+id/taskCateg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dip"
                android:text="@string/task_name" />

            <TextView
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dip"
                android:text="@string/task_desc" />

            <TextView
                android:id="@+id/taskDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dip"
                android:text="@string/task_finishToDate" />

            <TextView
                android:id="@+id/taskFinishToDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dip"
                android:text="@string/task_finishedDate" />

            <TextView
                android:id="@+id/taskFinishedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:id="@+id/taskExecutorRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dip"
                android:text="@string/task_executorId" />

            <TextView
                android:id="@+id/taskExecutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:id="@+id/taskInserterRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="6dip"
                android:text="@string/task_inserterId" />

            <TextView
                android:id="@+id/taskInserter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/closeButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/close" />

            <Button
                android:id="@+id/updateButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/update" />

            <Button
                android:id="@+id/deleteButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/delete" />
        </TableRow>
    </TableLayout>

</ScrollView>